// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourcesReducer should handle all defined error types: rejected types GET_SOURCES 1`] = `
Object {
  "result": Object {
    "view": Object {
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "sources": Array [],
      "updateSources": false,
    },
  },
  "type": "GET_SOURCES_REJECTED",
}
`;

exports[`SourcesReducer should handle all defined fulfilled types: fulfilled types GET_SOURCES 1`] = `
Object {
  "result": Object {
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "lastRefresh": 0,
      "pending": false,
      "sources": Array [],
      "updateSources": false,
    },
  },
  "type": "GET_SOURCES_FULFILLED",
}
`;

exports[`SourcesReducer should handle all defined pending types: pending types GET_SOURCES 1`] = `
Object {
  "result": Object {
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": true,
      "sources": Array [],
      "updateSources": false,
    },
  },
  "type": "GET_SOURCES_PENDING",
}
`;

exports[`SourcesReducer should handle specific defined types: defined type UPDATE_SOURCES 1`] = `
Object {
  "result": Object {
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "sources": Array [],
      "updateSources": true,
    },
  },
  "type": "UPDATE_SOURCES",
}
`;
